# zed-nix

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  DOCS_DEPLOYMENT.md  DOCUMENTATION_SUMMARY.md  LICENSE  Makefile  PUBLISHING.md  PUBLISHING_CHECKLIST.md  QUICKSTART.md  README.md  RENAME_COMPLETE.md  START_HERE.md  STATUS.md  TESTING.md  TODO.md  extension.toml  mkdocs.yml  test-example.nix
.github/workflows/: docs.yml
docs/: README.md  index.md  quick-start.md  status.md
docs/developer-guide/: project-summary.md  testing.md
docs/user-guide/: configuration.md  features.md  installation.md  overview.md
languages/nix/: config.toml  highlights.scm
src/: lib.rs
